--- a/styles.css
+++ b/styles.css
@@ -2,140 +2,119 @@
 
 *{
     margin: 0;
-    padding: 0%;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-}
-.container{
-    margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
 }
 
-.container .yuna {
-    transform: translatey(0);
-    transition-delay: 0s;
-}
-
-.container .yuna .active{
-    transform: translatey(-800px);
-    transition-delay: 0s;
-}
-
-.container .yura {
-    transform: translatey(0);
-    transition-delay: 0s;
-}
-
-
-.container .yura .active{
-    transform: translatey(-800px);
-    transition-delay: 0s;
-}
-
-
-section {
-   height: 100vh;
-   display: flex;
-   justify-content: center;
-   align-items: center; 
+section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: column;
+    background-color: #1f242d;
+    overflow-x: hidden;
 }
 
 h1{
+    position: relative;
+    font-size: 90px;
     color: white;
-    text-shadow: 1px 1px 4px #000;
 }
 
-.one{
-    background-color: rgb(119, 119, 119)
+p{
+    position: relative;
+    font-size: 35px;
+    color: #0ef;
+    font-weight: 600;
 }
 
-.yuna{
-    outline: none;
-    border: none;
-    background: none;
-    font-size: 45px;
-}
-.yuna:hover{
-    transform: scale(1.4);
-    transition: .3s ease;
-    color: rgb(255, 255, 255);
-    text-shadow: 
-    0 0 10px rgb(0, 0, 0),
-    0 0 20px rgb(0, 0, 0),
-    0 0 40px rgb(0, 0, 0),
-    0 0 80px rgb(0, 0, 0),
-    0 0 160px rgb(0, 0, 0);;
+section .animate{
+    opacity: 0;
+    filter: blur(5px);
+    transition: 1s;
 }
 
-
-
-.two{
-    background-color: rgb(38, 4, 61)
+ section.show-animate .animate{
+    opacity: 1;
+    filter: blur(0);
 }
 
-.yura{
-    border: none;
-    outline: none;
-    background: none;
-    font-size: 45px;
+.sec-1 .animate{
+    transform: translateX(-100%);
 }
 
-.yura:hover{
-    transform: scale(1.4);
-    transition: .3s ease;
-    color: rgb(255, 0, 0);
-    text-shadow: 
-    0 0 10px rgb(255, 0, 234),
-    0 0 20px rgb(255, 0, 234),
-    0 0 40px rgb(255, 0, 234),
-    0 0 80px rgb(255, 0, 234),
-    0 0 160px rgb(255, 0, 234);;
+.sec-1.show-animate .animate{
+    transform: translateX(0);
 }
 
-.three{
-    background-color: rgb(214, 27, 167)
+.sec-2 .animate{
+    transform: translateX(100%);
 }
 
-.mahiro{
-    border: none;
-    outline: none;
-    background: none;
-    font-size: 45px;
-}
-
-.mahiro:hover{
-    transform: scale(1.4);
-    transition: .3s ease;
-    color: rgb(131, 48, 73);
-    text-shadow: 
-    0 0 10px rgb(255, 0, 0),
-    0 0 20px rgb(255, 0, 0),
-    0 0 40px rgb(255, 0, 0),
-    0 0 80px rgb(255, 0, 0),
-    0 0 160px rgb(255, 0, 0);;
+.sec-2.show-animate .animate{
+    transform: translateX(0);
 }
 
 
-.four{
-    background-color: rgb(245, 68, 24)
+.sec-3 .animate{
+    transform: scale(.7);
 }
-.hina{
-    border: none;
-    outline: none;
-    background: none;
-    font-size: 45px;
+
+.sec-3.show-animate .animate{
+    transform: scale(1);
 }
-.hina:hover{
-    transform: scale(1.4);
-    transition: .3s ease;
-    color: rgb(223, 238, 9);
-    text-shadow: 
-    0 0 10px rgb(5, 217, 255),
-    0 0 20px rgb(5, 217, 255),
-    0 0 40px rgb(5, 217, 255),
-    0 0 80px rgb(5, 217, 255),
-    0 0 160px rgb(5, 217, 255);;
+
+.sec-2 p{
+    color: #0f0;
+}
+
+.sec-3 p{
+    color: #e0f;
+}
+
+.sec-4 .ShowRight-animate{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #1f242d;
+    transition: 1s;
+    transition-delay: calc(.2s * var(--i));
+}
+
+.sec-4.show-animate .ShowRight-animate{
+    width: 0;
+}
+
+.sec-4 p{
+    color: #ff0;
+}
+
+.sec-5 .images1{
+    transform: scale(.7);
+    transition: 1s;
+}
+
+.sec-5.show-animate .images1{
+    transform: scale(1);
+
+}
+
+.sec-5.show-animate .images1{
+    transform: scale(1);
+}
+
+.sec-5 .images img{
+   max-width: 470px;
+   padding: 0 17px;
+   transform: translateX(-100%);
+   transition-delay: calc(.2s * var(--i));
 }
 
 
+.sec-5.show-animate .images img{
+    transform: translateX(0);
+}
